--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
   </head>
   <body>
     <h1>pagina personal de francisco rubial</h1>
+    <img src="foto mia.jpg" width="250">
+    <p>Hola soy Francisco Rubial estudiante de la carrera Ingenieria
+    mencion informatica en la Universidad Nacional
+    Experimental del Táchira</p>
+    <img src="UNET-logo.png" width="300">
+    <p></p>
   </body>
 </html>
