--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>Hola soy Francisco Rubial estudiante de la carrera Ingenieria
     mencion informatica en la Universidad Nacional
     Experimental del Táchira</p>
-    <img src="UNET-logo.png" width="300">
+    <img src="UNET-logo.jpg" width="300">
     <p></p>
   </body>
 </html>
