test desde linux

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <li>Preparador de la materia Computacion I (2015-2016) y de
         programacion I 2017 UNET</li>
         <li>diseño de la pagina www.asiesdigital.com</li>
-        <li>diseño de la pagina www.franciscorubial.com.ve</li>    
+        <li>diseño de la pagina www.franciscorubial.com.ve</li>
     </ul>
-
+    <p>agregando codigo desde linux mint</p>
   </body>
 </html>
