--- a/index.html
+++ b/index.html
@@ -3,42 +3,99 @@
   <head>
     <meta charset="utf-8">
     <title>Francisco Rubial</title>
+    <style type="text/css">
+    body
+    {
+      margin-right: 10px;
+      padding: 0;
+      background-color: rgb(212, 213, 228);
+    }
+    #logo-unet
+    {
+      opacity: 0.3;
+      position: fixed;
+      left: 650px;
+      top: 300px;
+      z-index: 1;
+    }
+    #foto-mia
+    {
+      border-radius: 75px;
+      float: left;
+      position: absolute;
+      top: 5px;
+      margin-left: 30px;
+    }
+
+    h1
+    {
+      text-decoration: underline;
+    }
+    p {
+		  text-align: justify;
+	  }
+
+    .Encabezado
+    {
+      font-family: "Tahoma", "Geneva", sans-serif;
+      color: rgb(42, 41, 39);
+      position: relative;
+      float: left;
+      z-index: 2;
+    }
+
+
+    </style>
   </head>
   <body>
-    <h1>pagina personal de francisco rubial</h1>
-    <img src="foto mia.jpg" width="250">
-    <p><b>Hola soy Francisco Rubial estudiante de la carrera Ingenieria
-    mencion informatica en la Universidad Nacional
-    Experimental del Táchira</b></p>
-    <img src="logo unet.png" width="300">
-    <h1>CURRICULUM VITAE</h1>
-    <p><b>contacto:</b></p>
-    <ul>
-      <li>franjorub@gmail.com</li>
-      <li>+5804161308390</li>
-    </ul>
-    <h2>Objetivo profesional:</h2>
-    <p>adquirir nuevos conocimientos en el campo laboral</p>
-    <h2>Formacion Academica</h2>
-    <ul>
-      <li>IV semestre de ingenieria informatica en la Universidad
-      Nacional Experimental del Táchira septiembre 2014-actualidad</li>
-      <li>Bachiller en ciencias colegio Armando Reveron 2013</li>
-      <li>Curso de Java, 24 horas, Abril (Abr-2015) </li>
-      <li>Conocimientos básicos y técnicos en computación</li>
-      <li>Curso de GitHub Udemy</li>
-      <li>Curso desarrollo de aplicaciones en Android Udemy</li>
-      <li>Curso de desarrollo de juegos en Unity Udemy</li>
-      <li>Curso de C++ basico a avanzado Udemy</li>
-    </ul>
-    <h2>Proyectos en los que he participado:</h2>
-    <ul>
-        <li>Desarrollo de la apliacion para android PROTOBOTS UNET</li>
-        <li>Preparador de la materia Computacion I (2015-2016) y de
-        programacion I 2017 UNET</li>
-        <li>diseño de la pagina www.asiesdigital.com</li>
-        <li>diseño de la pagina www.franciscorubial.com.ve</li>
-    </ul>
-    <p>agregando codigo desde linux mint</p>
+
+    <div class="Encabezado">
+      <h1>Francisco José Rubial Díaz</h1>
+      <p>Mi nombre es Francisco, soy estudiante de la
+      Universidad Nacional
+      Experimental del Táchira, cursante del IV semestre de la carrera
+      Ingenieria mencion Informatica.<br>Trabajo de manera independiente para
+      la empresa Así es digital en Caracas, actualmente estoy ubicado en el
+      estado Táchira, Venezuela</p>
+      <hr>
+      <h1>Curriculum:</h1>
+      <h2>Formacion academica</h2>
+      <ul>
+        <li>Bachiller en ciencias, colegio Armando Reveron Táriba 2013</li>
+        <li>Curso de programacion Java Ingenieria Digital 24h, 2015
+        certificado Nº: 001920</li>
+        <li>Curso de programacion android 30+ horas, Udemy</li>
+        <li>Curso de Github, Udemy</li>
+        <li>Curs de desarrollo de juegos en Unity, Udemy</li>
+        <li>Curso de programacion C++ basico a Avanzado, Udemy</li>
+      </ul>
+      <h2>Proyectos:</h2>
+      <ul>
+        <li>Desarrollo de PROTOBOTS android para el Laboratorio de Prototipos
+        de la Universidad Nacional Experimental del Táchira</li>
+        <li>Desarrollo de Moneda Digital android para la empresa Así es digital
+        </li>
+        <li>Experiencia de docencia como preparador en el 2015-2016-2017
+        en la Universidad Nacional Experimental del Táchira en materias de
+        programacion</li>
+      </ul>
+      <hr>
+      <h3>Contacto:</h3>
+      <ul>
+        <li>tlf: +5804161308390</li>
+        <li>correo: franjorub@gmail.com</li>
+      </ul>
+
+
+    </div>
+
+
+    <a href="https://www.facebook.com/franciscojoserubial" target="_blank">
+    <img src="imagenes/facebook.png" width = "75"></a>
+    <img id = "foto-mia" src="imagenes/foto-mia.jpg" width="150">
+
+    <img id = "logo-unet" src="imagenes/logo-unet.png" width="200">
+
+
   </body>
 </html>
