cambio en el inicio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="Encabezado">
       <h1>Francisco José Rubial Díaz</h1>
-      <p>Mi nombre es Francisco, soy estudiante de la
+      <p>Hola mi nombre es Francisco, soy estudiante de la
       Universidad Nacional
       Experimental del Táchira, cursante del IV semestre de la carrera
       Ingenieria mencion Informatica.<br>Trabajo de manera independiente para
