--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <h2>Proyectos en los que he participado:</h2>
     <ul>
         <li>Desarrollo de la apliacion para android PROTOBOTS UNET</li>
-        <li>Preparador de la materia Computacion I (2015-2016) y de
-        programacion I 2017 UNET</li>
+        <li>Preparador de la materia Computación I (2015-2016) y de
+        programación I 2017 UNET</li>
         <li>diseño de la pagina www.asiesdigital.com</li>
         <li>diseño de la pagina www.franciscorubial.com.ve</li>    
     </ul>
