--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </style>
   </head>
   <body>
-<<<<<<< HEAD
+
     <h1>pagina personal de francisco rubial</h1>
     <img src="foto mia.jpg" width="250">
     <p><b>Hola soy Francisco Rubial estudiante de la carrera Ingenieria
@@ -56,35 +56,8 @@
     Experimental del Táchira</b></p>
     <img src="logo unet.png" width="300">
     <h1>CURRICULUM VITAE</h1>
-    <p><b>contacto:</b></p>
-    <ul>
-      <li>franjorub@gmail.com</li>
-      <li>+5804161308390</li>
-    </ul>
-    <h2>Objetivo profesional:</h2>
-    <p>adquirir nuevos conocimientos en el campo laboral</p>
-    <h2>Formacion Academica</h2>
-    <ul>
-      <li>IV semestre de ingenieria informatica en la Universidad
-      Nacional Experimental del Táchira septiembre 2014-actualidad</li>
-      <li>Bachiller en ciencias colegio Armando Reveron 2013</li>
-      <li>Curso de Java, 24 horas, Abril (Abr-2015) </li>
-      <li>Conocimientos básicos y técnicos en computación</li>
-      <li>Curso de GitHub Udemy</li>
-      <li>Curso desarrollo de aplicaciones en Android Udemy</li>
-      <li>Curso de desarrollo de juegos en Unity Udemy</li>
-      <li>Curso de C++ basico a avanzado Udemy</li>
-    </ul>
-    <h2>Proyectos en los que he participado:</h2>
-    <ul>
-        <li>Desarrollo de la apliacion para android PROTOBOTS UNET</li>
-        <li>Preparador de la materia Computación I (2015-2016) y de
-        programación I 2017 UNET</li>
-        <li>diseño de la pagina www.asiesdigital.com</li>
-        <li>diseño de la pagina www.franciscorubial.com.ve</li>    
-    </ul>
-=======
-
+	<img href = "imagenes/curriculum.jpg" >
+	
     <div class="Encabezado">
       <h1>Francisco José Rubial Díaz</h1>
       <p>Hola mi nombre es Francisco, soy estudiante de la
