--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     Experimental del Táchira</b></p>
     <img src="logo unet.png" width="300">
     <h1>CURRICULUM VITAE</h1>
-	<img href = "imagenes/curriculum.jpg" >
-	
+	  <img src = "imagenes/curriculum.jpg" >
+
     <div class="Encabezado">
       <h1>Francisco José Rubial Díaz</h1>
       <p>Hola mi nombre es Francisco, soy estudiante de la
@@ -105,7 +105,7 @@
 
     <img id = "logo-unet" src="imagenes/logo-unet.png" width="200">
 
->>>>>>> 27cbe25397b5839e93dca95b1ebfe12578f6c3b0
+
 
   </body>
 </html>
