--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
       top: 300px;
       z-index: 1;
     }
-    #foto-mia
-    {
-      border-radius: 75px;
-      float: left;
-      position: absolute;
-      top: 5px;
-      margin-left: 30px;
-    }
-
     h1
     {
       text-decoration: underline;
@@ -34,7 +25,6 @@
     p {
 		  text-align: justify;
 	  }
-
     .Encabezado
     {
       font-family: "Tahoma", "Geneva", sans-serif;
@@ -43,69 +33,17 @@
       float: left;
       z-index: 2;
     }
-
-
     </style>
   </head>
   <body>
-
     <h1>pagina personal de francisco rubial</h1>
-    <img src="foto mia.jpg" width="250">
     <p><b>Hola soy Francisco Rubial estudiante de la carrera Ingenieria
     mencion informatica en la Universidad Nacional
     Experimental del Táchira</b></p>
-    <img src="logo unet.png" width="300">
     <h1>CURRICULUM VITAE</h1>
-	  <img src = "imagenes/curriculum.jpg" >
-
     <div class="Encabezado">
-      <h1>Francisco José Rubial Díaz</h1>
-      <p>Hola mi nombre es Francisco, soy estudiante de la
-      Universidad Nacional
-      Experimental del Táchira, cursante del IV semestre de la carrera
-      Ingenieria mencion Informatica.<br>Trabajo de manera independiente para
-      la empresa Así es digital en Caracas, actualmente estoy ubicado en el
-      estado Táchira, Venezuela</p>
-      <hr>
-      <h1>Curriculum:</h1>
-      <h2>Formacion academica</h2>
-      <ul>
-        <li>Bachiller en ciencias, colegio Armando Reveron Táriba 2013</li>
-        <li>Curso de programacion Java Ingenieria Digital 24h, 2015
-        certificado Nº: 001920</li>
-        <li>Curso de programacion android 30+ horas, Udemy</li>
-        <li>Curso de Github, Udemy</li>
-        <li>Curs de desarrollo de juegos en Unity, Udemy</li>
-        <li>Curso de programacion C++ basico a Avanzado, Udemy</li>
-      </ul>
-      <h2>Proyectos:</h2>
-      <ul>
-        <li>Desarrollo de PROTOBOTS android para el Laboratorio de Prototipos
-        de la Universidad Nacional Experimental del Táchira</li>
-        <li>Desarrollo de Moneda Digital android para la empresa Así es digital
-        </li>
-        <li>Experiencia de docencia como preparador en el 2015-2016-2017
-        en la Universidad Nacional Experimental del Táchira en materias de
-        programacion</li>
-      </ul>
-      <hr>
-      <h3>Contacto:</h3>
-      <ul>
-        <li>tlf: +5804161308390</li>
-        <li>correo: franjorub@gmail.com</li>
-      </ul>
-
-
+      <img src="imagenes/curriculum.jpg" width="300">
     </div>
-
-
-    <a href="https://www.facebook.com/franciscojoserubial" target="_blank">
-    <img src="imagenes/facebook.png" width = "75"></a>
-    <img id = "foto-mia" src="imagenes/foto-mia.jpg" width="150">
-
     <img id = "logo-unet" src="imagenes/logo-unet.png" width="200">
-
-
-
   </body>
 </html>
