--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     Experimental del Táchira</b></p>
     <h1>CURRICULUM VITAE</h1>
     <div class="Encabezado">
-      <img src="imagenes/curriculum.jpg" width="300">
+      <img src="imagenes/curriculum.jpg"
+      onmouseover="this.width=500;this.height=400;"
+      onmouseout="this.width=100;this.height=80;"
+      width="100" height="80" alt="" />
     </div>
     <img id = "logo-unet" src="imagenes/logo-unet.png" width="200">
   </body>
