Corecciones en tamaño

--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     mencion informatica en la Universidad Nacional
     Experimental del Táchira</b></p>
     <h1>CURRICULUM VITAE</h1>
+    <p>Desliza el maus sobre la imagen para ampliarla.</p>
     <div class="Encabezado">
       <img src="imagenes/curriculum.jpg"
-      onmouseover="this.width=1000;this.height=800;"
+      onmouseover="this.width=1500;this.height=1300;"
       onmouseout="this.width=500;this.height=400;"
       width="500" height="400" alt="" />
     </div>
