--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1>CURRICULUM VITAE</h1>
     <p>Desliza el maus sobre la imagen para ampliarla.</p>
     <div class="Encabezado">
-      <img src="imagenes/curriculum.jpg"
+      <img src="imagenes/CV.jpg"
       onmouseover="this.width=1500;this.height=1300;"
       onmouseout="this.width=500;this.height=400;"
       width="500" height="400" alt="" />
